--- a/resources.qrc
+++ b/resources.qrc
@@ -1,2 +1,9 @@
-<!DOCTYPE RCC>
-<RCC version="1.0"/>
+<RCC>
+    <qresource prefix="/images">
+        <file>world_images/maze1.png</file>
+        <file>world_images/maze2.png</file>
+        <file>world_images/maze3.png</file>
+        <file>world_images/worldmap.png</file>
+        <file>world_images/worldmap4.png</file>
+    </qresource>
+</RCC>
