--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -704,6 +704,12 @@ hr { height: 1px; border-width: 0; }
            <height>30</height>
           </size>
          </property>
+         <property name="maximum">
+          <number>100</number>
+         </property>
+         <property name="singleStep">
+          <number>10</number>
+         </property>
          <property name="value">
           <number>50</number>
          </property>
